# SawysNotes

./: .gitignore  Cargo.toml  README.md  build.rs  shell.nix
.github/workflows/: pages.yml
assets/content/: analog.md  chess.md  digital.md  index.md  math.md
assets/content/adc/: flash.md
assets/content/analog/10) Oscillators & PLLs/: TODO.md
assets/content/analog/8) Op-Amp Design/: 1) Parameters.md
assets/content/chap1/: electrons.md
assets/content/chap2/: pn_junction.md
src/: lib.rs  main.rs
style/: main.scss
templates/: layout.html  sidebar.html
