[package]
name = "documentation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
regex = "1.5"
walkdir = "2.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
askama = "0.12"
askama_axum = "0.4"
pulldown-cmark = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "DomTokenList",
    "Storage",
    "Event",
    "EventListener",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "DomRectReadOnly",
    "NodeList",
    "Location",
]
